<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_home_fragment_slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/home_title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_shape_show_captcha"
        android:text="@string/home_show" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#ff01946f"
        android:text="@string/home_verify"
        android:textColor="@android:color/white" />

</LinearLayout>